# Compiler_for_TinyGO

./: CMakeLists.txt  LANGUAGE.md  main.cpp  main.go  readme.txt
doc/: LANGUAGE.md
src/BackEnd/Headers/: Operands.h  T86Inst.h
src/BackEnd/Sources/: Operands.cpp  T86Inst.cpp
src/Common/Headers/: types.h
src/Common/Sources/: types.cpp
src/FrontEnd/Headers/: AST.h  lexer.h  parser.h
src/FrontEnd/Sources/: AST_IR.cpp  AST_checker.cpp  AST_parser.cpp  lexer.cpp  parser.cpp
src/Frontend/Headers/: AST.h  lexer.h  parser.h  types.h
src/Frontend/Sources/: AST_IR.cpp  AST_checker.cpp  AST_parser.cpp  lexer.cpp  parser.cpp  types.cpp
src/Headers/: AST.h  lexer.h  parser.h
src/MiddleEnd/Headers/: IR.h
src/MiddleEnd/Sources/: IR.cpp  IR_codegen.cpp
src/Sources/: AST.cpp  lexer.cpp  parser.cpp
tests/: basic_arith.go  fibonacci.go  for_loop.go  if_else.go  methods.go  multiple_returns.go  pointers.go  structures.go
tests/wrong_input_tests/: two_same_var.go  unmatched_types.go  wrong_syntax.go  wrong_type.go
